# quant

./: .env.template  .gitignore  AGENTS.md  ARCHITECTURE.md  Backtest.py  LICENSE  README.md  all_stock_code.pkl  backtest2.py  backtest3.py  config.py  fetch_data.py  get_new.py  get_news.py  main.py  note.md  prompt  prompt.md  requirements.txt  res.csv  roadmap.md  stock_code_filter.py  test.py  tutorials.ipynb
alpha_models/: AGENTS.md  LSTM.py  qlib_workflow.py  quantTransformer.py  roadmap.md  workflow_config_transformer_Alpha158.yaml  workflow_config_transformer_Alpha360.yaml
backtesting/: portfolio.py
config/: AGENTS.md  roadmap.md  settings.py  settings.yaml
data_pipeline/: AGENTS.md  database.py  fetcher.py  ingest.py  loader.py  preprocesser.py  roadmap.md
database/: influx_manager.py  store.py
docs/: AGENTS.md  ARCHITECTURE_zh.md  NAVIGATION.md  NAVIGATION_zh.md  README_zh.md  index.md  index_zh.md  note.md  python-runtime-guide.md  python-runtime-guide_zh.md  qlib_transformer.py  roadmap.md  tutorials.ipynb  workflow_runner_control.md  workflow_runner_control_zh.md
modelA/: LSTM.py
model_function/: __init__.py  qlib.py  universe.py
newsModule/: interfaces.py  models.py  repository.py  schemas.py  service.py
news_module/: AGENTS.md  __init__.py  interfaces.py  models.py  repository.py  roadmap.md  schemas.py  service.py
quantcore/: __init__.py  factory.py  history.py  pipeline.py  (+1 more)
server/: AGENTS.md  CMakeLists.txt  config.json  main.cc  roadmap.md
server/docker/: .env.template  docker-compose.yml
server/sql/: market_data_daily.sql
(+171 files in other folders)
